WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110258
Fix checkThatTokensAreSafeToSendToAnotherThread() now that the preload scanner is enabled
https://bugs.webkit.org/show_bug.cgi?id=110258
Summary
Fix checkThatTokensAreSafeToSendToAnotherThread() now that the preload scanne...
Tony Gentilcore
Reported
2013-02-19 13:42:38 PST
Fix checkThatTokensAreSafeToSendToAnotherThread() now that the preload scanner is enabled
Attachments
Patch
(1.65 KB, patch)
2013-02-19 13:43 PST
,
Tony Gentilcore
no flags
Details
Formatted Diff
Diff
Patch
(1.66 KB, patch)
2013-02-19 14:15 PST
,
Tony Gentilcore
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tony Gentilcore
Comment 1
2013-02-19 13:43:25 PST
Created
attachment 189155
[details]
Patch
Eric Seidel (no email)
Comment 2
2013-02-19 14:02:48 PST
Comment on
attachment 189155
[details]
Patch I would have changed it closer to when we create the preload request.
Adam Barth
Comment 3
2013-02-19 14:06:23 PST
Comment on
attachment 189155
[details]
Patch Yeah, the copy should be in the PreloadRequest object. That's where do we the other copies.
Tony Gentilcore
Comment 4
2013-02-19 14:15:24 PST
Created
attachment 189159
[details]
Patch
WebKit Review Bot
Comment 5
2013-02-19 16:17:05 PST
Comment on
attachment 189159
[details]
Patch Clearing flags on attachment: 189159 Committed
r143402
: <
http://trac.webkit.org/changeset/143402
>
WebKit Review Bot
Comment 6
2013-02-19 16:17:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug