Fix checkThatTokensAreSafeToSendToAnotherThread() now that the preload scanner is enabled https://bugs.webkit.org/show_bug.cgi?id=110258

Reviewed by Adam Barth.

We were hitting this ASSERT on numerous tests with the background parser enabled. This copy fixes the assertion.

No new tests becuase covered by existing tests.

* html/parser/HTMLResourcePreloader.h:
(WebCore::PreloadRequest::setCharset):


Canonical link: https://commits.webkit.org/128584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143402 268f45cc-cd09-0410-ab3c-d52691b4dbfc